--- a/physik_praktikum/versuch3/Versuch3_StatistikI_Würfel_Finn_Wagner.ipynb
+++ b/physik_praktikum/versuch3/Versuch3_StatistikI_Würfel_Finn_Wagner.ipynb
@@ -395,10 +395,7 @@
     "print(f'Die drei experimentellen Werte für das arithmetische Mittel bei {10000} Würfen '\n",
     "      f'eines 20 seitigen Würfels sind: {\", \".join([str(i[1]) for i in dices])}')\n",
     "print(f'Der Mittelwert der experimentelen Ergebnisse {µ=:.4f} ist eine {approximation} Aproximation des berechneten Werts von {theoretischer_erwartungswert}. '\n",
-    "      f'Der experimentele Wert ist auf {nachkomma_genauigkeit} Nachkommastellen genau mit einer Abweichung von {abweichung:.4f}.')\n",
-    "\n",
-    "# TODO Vergleiche Mittelwerte welcher ist am nächsten dran, welcher fällt aus der Reihe. Generell mit mehr Würfen steigt Genauigkeit.\n",
-    "# TODO Dafür Wert speichern in jeder Zelle und dann Abweichung berechnen etc."
+    "      f'Der experimentele Wert ist auf {nachkomma_genauigkeit} Nachkommastellen genau mit einer Abweichung von {abweichung:.4f}.')"
    ]
   },
   {
