--- a/physik_praktikum/versuch6/quellen.bib
+++ b/physik_praktikum/versuch6/quellen.bib
@@ -40,7 +40,7 @@
 	author = {www.bussgeldkatalog.org},
 	title = {Reaktionszeit: Rechtzeitig gebremst?},
     year = 2022,
-    url = {https://www.bussgeldkatalog.org/reaktionszeit/#https://www.bussgeldkatalog.org/reaktionszeit/#},
+    url = {https://www.bussgeldkatalog.org/reaktionszeit/#},
     urldate = {2022-03-09}
 }
 
